chore: prepare public npm distribution